test/corpus/arrays.txt
================================================================================
Concat array func
================================================================================

concat(http.request.headers[*][*],"test")[0] eq "80"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (string_array
      (map_string_array_field)
      (string))
    (number)
    (string)))

================================================================================
Concat array func 2
================================================================================

concat(http.request.headers["test"][*],"test")[0] eq "80"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (string_array
      (string_array
        (map_string_array_field)
        (string))
      (string))
    (number)
    (string)))

================================================================================
any array expansion
================================================================================

any(len(http.request.headers["test"][*])[*] eq 3)

--------------------------------------------------------------------------------

(source_file
  (bool_func
    (array_func
      (number_array
        (string_array
          (map_string_array_field)
          (string)))
      (number))))

================================================================================
Number array field
================================================================================

any(cf.bot_management.detection_ids[*] == 80)

--------------------------------------------------------------------------------

(source_file
  (bool_func
    (array_func
      (number_array
        (array_number_field))
      (number))))
