test/corpus/complex.txt
================================================================================
Complex expr
================================================================================
(
  (http.host eq "api.example.com" and http.request.uri.path eq "/api/v2/auth")
  # testing 123
  or (http.host matches "^(www|store|blog)\.example.com" and http.request.uri.path contains "wp-login.php")
  or ip.geoip.country in {"CN" "TH" "US" "ID" "KR" "MY" "IT" "SG" "GB"}
  or ip.geoip.asnum in {12345 54321 11111}
) and not ip.src in {11.22.33.0/24}

--------------------------------------------------------------------------------

(source_file
  (compound_expression
    (group
      (compound_expression
        (compound_expression
          (compound_expression
            (group
              (compound_expression
                (simple_expression
                  (string_field)
                  (string))
                (simple_expression
                  (string_field)
                  (string))))
            (comment)
            (group
              (compound_expression
                (simple_expression
                  (string_field)
                  (string))
                (simple_expression
                  (string_field)
                  (string)))))
          (in_expression
            (string_field)
            (string_set
              (string)
              (string)
              (string)
              (string)
              (string)
              (string)
              (string)
              (string)
              (string))))
        (in_expression
          (number_field)
          (number_set
            (number)
            (number)
            (number)))))
    (not_expression
      (not_operator)
      (in_expression
        (ip_field)
        (ip_set
          (ip_range
            (ipv4)))))))
