test/corpus/functions.txt
================================================================================
Simple func
================================================================================

to_string(cf.edge.server_port) eq "80"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (numberlike_field
          (number_field))))
    (string)))

================================================================================
variable arg count func
================================================================================

concat("String1",http.host,"String","2") == "String1 String2"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (string)
        (stringlike_field
          (string_field))
        (string)
        (string)))
    (string)))

================================================================================
recursive func
================================================================================

lower(to_string(cf.edge.server_port)) eq "80"

--------------------------------------------------------------------------------

(source_file
  (simple_expression
    (stringlike_field
      (string_func
        (stringlike_field
          (string_func
            (numberlike_field
              (number_field))))))
    (string)))
