test/corpus/precedence.txt
================================================================================
AND precedence test 1
================================================================================

cf.edge.server_port eq 80 or cf.edge.server_port == 443 and ssl == true

--------------------------------------------------------------------------------

(source_file
  (compound_expression
    (simple_expression
      (number_field)
      (number))
    (compound_expression
      (simple_expression
        (number_field)
        (number))
      (simple_expression
        (bool_field)
        (boolean)))))

================================================================================
AND precedence test 2
================================================================================

cf.edge.server_port == 443 and ssl == true or cf.edge.server_port eq 80

--------------------------------------------------------------------------------

(source_file
  (compound_expression
    (compound_expression
      (simple_expression
        (number_field)
        (number))
      (simple_expression
        (bool_field)
        (boolean)))
    (simple_expression
      (number_field)
      (number))))
