test/corpus/simple.txt
================================================================================
Simple expression
================================================================================

cf.edge.server_port eq 80 or (cf.edge.server_port == 443 && ssl)

--------------------------------------------------------------------------------

(source_file
  (compound_expression
    (simple_expression
      (numberlike_field
        (number_field))
      (number))
    (group
      (compound_expression
        (simple_expression
          (numberlike_field
            (number_field))
          (number))
        (boollike_field
          (bool_field))))))
